--- a/grid-template-init-project/index.html
+++ b/grid-template-init-project/index.html
@@ -137,6 +137,21 @@
       <a href="#" class="btn-accent">View all skills</a></div>
   </section>
 
+  <section class="about">
+    <div class="container">
+      <div class="about-text">
+        <h2>Are You Ready?<br>Let's start!</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias voluptates commodi eligendi perspiciatis non ipsam numquam, perferendis fugiat amet molestias provident unde, deleniti quo ducimus placeat voluptas!</p>
+        <p>Quisquam voluptatum quae veritatis quas odio dolores quis voluptas asperiores ex obcaecati reiciendis quidem ducimus et doloribus sed tempore, unde beatae aut consectetur eligendi ratione repellendus nulla pariatur. Explicabo enim officia iure blanditiis eos, velit.</p>
+        <p>Culpa consequatur labore, adipisci asperiores impedit tenetur quam ab dicta recusandae quas nobis reprehenderit necessitatibus placeat corporis enim aliquid sequi saepe. Quos amet, aliquam, reiciendis porro eos voluptates maiores. Voluptas dolor quidem tempora illum laboriosam dolorum neque tenetur.</p>
+        <p>Alias voluptates commodi eligendi perspiciatis non ipsam numquam, perferendis fugiat amet molestias provident unde, deleniti quo ducimus placeat voluptas! Quos amet, aliquam, reiciendis porro eos voluptates maiores.</p>
+      </div>
+      <div class="about-img">
+        <img src="assets/img/img-lamp-webdev.png" alt="lamp">
+      </div>
+    </div>
+  </section>
+
 
   
   
