--- a/grid-template-init-project/index.html
+++ b/grid-template-init-project/index.html
@@ -152,6 +152,16 @@
     </div>
   </section>
 
+  <section class="form">
+    <form action="#" method="POST">
+      <div class="container">
+        <input class="form-name" type="text" placeholder="Ваше имя...">
+        <input class="form-email" type="email" placeholder="Ваш email...">
+        <input class="form-submit" type="submit" value="Subscribe">
+      </div>
+    </form>
+  </section>
+
 
   
   
